# dataroot_test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.docker/: worker.Dockerfile
src/: Dockerfile  app.py  credentials.json  dependencies.py  main.py  pyproject.toml  tasks.py
src/connectors/: redis.py  redis_connector.py
src/routes/: endpoints.py
src/utils/: sessions.py  writer.py
