[tool.poetry]
name = "python-test-assigment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_test_assigment"}]

[tool.poetry.dependencies]
python = "3.11.9"
openai = "1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
